objects/Account.object
<CustomObject>
	<fields>
		<fullName>Alexa_Number__c</fullName>
		<label>Alexa Rank</label>
		<precision>15</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>Alternative_Language__c</fullName>
		<label>Alternative Language</label>
		<picklist>
			<picklistValues>
				<fullName>French</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Italian</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>German</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Spanish</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Japanese</fullName>
			</picklistValues>
		</picklist>
		<type>Picklist</type>
	</fields>
	<fields>
		<fullName>Americas_SPP_Partner_Level__c</fullName>
		<label>Americas SPP Partner Level</label>
		<picklist>
			<picklistValues>
				<fullName>Premier Partner</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Business Partner</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Community Partner</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Community Plus</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Global Alliance</fullName>
			</picklistValues>
		</picklist>
		<type>Picklist</type>
	</fields>
	<fields>
		<fullName>An_EMEA_Program_Region__c</fullName>
		<description>Determines if the Account is part of the EMEA Program scope.
If the rollout pushes through, this should be: IF( OR(
CONTAINS( "AD,AE,AF,AL,AM,AT,AZ,BA,BE,BG,BH,BY,CH,CY,CZ,DE,DZ,EE,EG,ES,FI,FR,GB,GE,GG", BillingCountry ),
CONTAINS( "GI,GR,HR,HU,IE,IL,IM,IQ,IT,JE,JO,KG,KW,KZ,LB,LI,LT,LU,LV,LY,MA,MC,MD,ME,MK", BillingCountry ),
CONTAINS( "MT,NL,NO,OM,PK,PL,PT,QA,RE,RO,RS,RU,SA,SE,SI,SK,SM,TJ,TM,TN,TR,UA,UZ,VA,YE", BillingCountry )
), "Y", "N")</description>
		<formula>IF( CONTAINS( "DE,CN,AT,CH,LI,JP,KR,AD,BE,BG,CY,CZ,DK,EE,FO,FI,FR,DE,GI,GR,VA,HU,IS,LV,IE,LT,LU,IT,MT,MC,NL,NO,PL,PT,RO,RU,SM,SK,SI,ES,SE,GB,AU,NZ,FJ,PG,WS,SB,MH,CK,IN,LK,NP,BD,BN,KH,ID,MY,PK,PH,SG,TH,VN,LA,AL,BA,HR,MK,ME,RS,TR,AO,BJ,BW,BF,BI,CM,CV,CF,TD,KM,CG,CI,DJ,GQ,ER,ET,GA,GM,GH,GW,KE,LS,LR,MG,MW,MV,ML,MR,MU,YT,MZ,NA,NE,NG,RW,SN,SC,SL,SO,ZA,SZ,ST,TZ,TG,UG,EH,ZM,ZW,AM,AZ,BY,GE,KZ,KG,MD,TJ,TM,UA,UZ,KV,CA,US,BR,MX,AI,AQ,AG,AR,AW,BS,BB,BZ,BM,BO,KY,CL,CO,CR,DM,DO,EC,SV,FK,GF,GD,GP,GT,GN,GY,HT,HN,JM,MQ,MS,AN,NI,PA,PY,PE,PR,GS,SH,KN,LC,VC,SR,TT,TC,UY,UM,VE,VG,RE,AE,AF,BH,DZ,EG,IQ,JO,KW,LB,LY,MA,OM,QA,SA,TN,YE,IL,HK,TW,MM ", BillingCountry), "Y", "N")</formula>
		<label>An EMEA Program Region?</label>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>Analytics_GreenZone__c</fullName>
		<label>Analytics</label>
		<picklist>
			<picklistValues>
				<fullName>Green</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Yellow</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Red</fullName>
			</picklistValues>
		</picklist>
		<type>Picklist</type>
	</fields>
	<fields>
		<fullName>Anniversary_Date_Min__c</fullName>
		<description>This is the minimum anniversary date of the related post sales for this account.</description>
		<label>Upcoming CCT Renewal Date</label>
		<type>Date</type>
	</fields>
	<fields>
		<fullName>Anniversary_Date__c</fullName>
		<label>Anniversary Date</label>
		<type>Date</type>
	</fields>
	<fields>
		<fullName>Annual_Revenue__c</fullName>
		<label>Annual Revenue</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>Apex_List_of_Key_Customers__c</fullName>
		<label>APEX List of Key Customers</label>
		<length>32768</length>
		<type>LongTextArea</type>
	</fields>
	<fields>
		<fullName>Apex_immediate_Sales_Oppty__c</fullName>
		<label>APEX Immediate Sales Opportunity</label>
		<type>TextArea</type>
	</fields>
	<fields>
		<fullName>Appear_in_Partner_Finder__c</fullName>
		<defaultValue>false</defaultValue>
		<label>List in Partner Finder?</label>
		<type>Checkbox</type>
	</fields>
	<fields>
		<fullName>Archived_Date__c</fullName>
		<description>AE - Stamps the date when the Account Owner was changed from Adobe Admin to Archived Admin. This field will be blank if the Account Owner is Adobe Admin.</description>
		<label>Archived Date</label>
		<type>Date</type>
	</fields>
	<fields>
		<fullName>Assigned_Seats__c</fullName>
		<label>Assigned Seats</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>Attrition_Eligible__c</fullName>
		<defaultValue>false</defaultValue>
		<description>Determines whether or not Attrition should be considered for Comp purposes for the Account. If this flag is checked, then the "Attrition Reportable" field will be set based on the Attrition or Attrition Override field. If the flag is not checked then Attrition does not need to be considered for this account during Comp calculation.</description>
		<inlineHelpText>Should Attrition be calculated for this Account?</inlineHelpText>
		<label>Dx Comp Attrition Eligible</label>
		<type>Checkbox</type>
	</fields>
	<fields>
		<fullName>Audience_Manager_GreenZone__c</fullName>
		<label>Audience Manager</label>
		<picklist>
			<picklistValues>
				<fullName>Green</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Yellow</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Red</fullName>
			</picklistValues>
		</picklist>
		<type>Picklist</type>
	</fields>
	<fields>
		<fullName>Authorized_for_EDU__c</fullName>
		<defaultValue>false</defaultValue>
		<description>Authorized for the NA EDU Desktop Deal Registration Program.</description>
		<label>Authorized for EDU</label>
		<type>Checkbox</type>
	</fields>
	<fields>
		<fullName>Avg_students_per_class__c</fullName>
		<label>Avg Number of students per class</label>
		<precision>10</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>Avg_workstations_per_class__c</fullName>
		<label>Avg Number of workstations per class</label>
		<precision>10</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>BC_Status__c</fullName>
		<label>BC Status</label>
		<picklist>
			<picklistValues>
				<fullName>Training Email Sent</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Questionnaire Email Sent</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>T&amp;Q Email Sent</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Not Started</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>In Progress</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>CP Training Notified</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Completed</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>CP Survey Notified</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>CP Survey Approved</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Auto Approved</fullName>
			</picklistValues>
			<restrictedPicklist>true</restrictedPicklist>
		</picklist>
		<type>Picklist</type>
	</fields>
	<fields>
		<fullName>BEHANCE_NET_LOGIN__c</fullName>
		<label>Behance Net Login</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>BP_Number__c</fullName>
		<label>BP Number</label>
		<length>15</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>Behance_Mobile__c</fullName>
		<label>Behance Mobile Login</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>Billing_Currency__c</fullName>
		<description>This field will be used for displaying the correct currency in email template</description>
		<formula>CASE(BillingCountry,"DE","€",
"CH","CHF",
"AT","€",
"LI","$",
"FR","€",
"GB","£",
"DK","DKK",
"FI","€",
"BE","€",
"LU","€",
"NL","€",
"ES","€",
"IT","€",
"NO","NOK",
"SE","SEK",
"RU","$",
"BG","€",
"CY","€",
"CZ","€",
"EE","€",
"GR","€",
"HU","€",
"LT","€",
"LV","€",
"PL","€",
"RO","€",
"SI","€",
"SK","€",
"IE","€",
"PT","€",
"GI","£",
"MT","$",
"FO","$",
"IS","$",
"MC","$",
"AD","$",
"SM","$",
"VA","$",
"JP","¥",
"AU","AUD",
"NZ","AUD",
"RE","€",
"AE","€",
"AF","€",
"BH","€",
"DZ","€",
"EG","€",
"IQ","€",
"JO","€",
"KW","€",
"LB","€",
"LY","€",
"MA","€",
"OM","€",
"QA","€",
"SA","€",
"TN","€",
"YE","€",
"IL","€",
"$")</formula>
		<formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
		<label>Billing Currency</label>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>Business_Description_Other_Language__c</fullName>
		<label>Business Description (Other Language)</label>
		<type>TextArea</type>
	</fields>
	<fields>
		<fullName>Business_Manager_Email__c</fullName>
		<label>Business Manager Email</label>
		<type>Email</type>
	</fields>
	<fields>
		<fullName>Business_Manager_Name__c</fullName>
		<label>Business Manager Name</label>
		<length>100</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>Business_Manager_Telephone__c</fullName>
		<label>Business Manager Telephone</label>
		<type>Phone</type>
	</fields>
	<fields>
		<fullName>Business_Plan_Status_Date__c</fullName>
		<label>Business Plan Status Date</label>
		<type>Date</type>
	</fields>
	<fields>
		<fullName>Business_Plan_Status__c</fullName>
		<label>Business Plan Status</label>
		<picklist>
			<picklistValues>
				<fullName>Approved</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Waived</fullName>
			</picklistValues>
		</picklist>
		<type>Picklist</type>
	</fields>
	<fields>
		<fullName>Business_Registration_Number__c</fullName>
		<label>Business Registration Number</label>
		<length>80</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>Business_Years__c</fullName>
		<label>Number of Business Years</label>
		<length>100</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>CC_CSAM_Customer_Tier__c</fullName>
		<description>Creative Cloud CSAM Customer tier based on total number of Creative Cloud Seats</description>
		<formula>IF(Total_Seats__c  &lt;= 3, "Tier 1",
IF(AND(Total_Seats__c  &gt; 3 , Total_Seats__c &lt; 75), "Tier 2","Tier 3"
)
)</formula>
		<formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
		<inlineHelpText>Creative Cloud CSAM Customer tier based on total number of Creative Cloud Seats</inlineHelpText>
		<label>CC CSAM Customer Tier</label>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>CC_Cloud_purchase_Method__c</fullName>
		<label>CC/Doc Cloud Purchase Method</label>
		<picklist>
			<picklistValues>
				<fullName>Credit Card</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Purchase Order</fullName>
			</picklistValues>
		</picklist>
		<type>MultiselectPicklist</type>
	</fields>
	<fields>
		<fullName>CC_Doc_Cloud_Offerings__c</fullName>
		<label>CC/Doc Cloud Offerings</label>
		<picklist>
			<picklistValues>
				<fullName>CC Enterprise</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>CC Team</fullName>
			</picklistValues>
		</picklist>
		<type>MultiselectPicklist</type>
	</fields>
	<fields>
		<fullName>CC_Doc_Cloud_Purchase_Summary__c</fullName>
		<label>Route to Market Summary</label>
		<picklist>
			<picklistValues>
				<fullName>Direct</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Indirect</fullName>
			</picklistValues>
		</picklist>
		<type>MultiselectPicklist</type>
	</fields>
	<fields>
		<fullName>CH_Partner_Roll_up__c</fullName>
		<description>This field aggregates Account Names into the different CH Partners</description>
		<formula>if (begins(( Name ),"CDW"),"CDW",
if (begins(Upper((Name)),"DELL"),"DELL/ASAP",
if (begins(Upper((Name)),"ASAP SOFTWARE"),"DELL/ASAP",
if (begins(Upper((Name)),"INSIGHT"),"INSIGHT",
if (begins(Upper((Name)),"SOFTWARE HOUSE"),"SHI",
if ((Name = "Shi"),"SHI",
if (begins((Name), "SHI"),"SHI",
if (begins(Upper((Name)),"COMPUCOM"),"COMPUCOM",
if (begins((Name),"COMPUCOM"),"COMPUCOM",
if (begins((Name),"EN Point"),"EN POINTE",
if (begins((Name),"En Point"),"EN POINTE",
if (contains (Upper((Name)),"GLOBAL TIGER"),"GLOBAL TIGER",
if (contains (Upper((Name)),"HEWLETT"),"HP",
if ((Name = "HP"),"HP",
if ((Name = "Hp"),"HP",
if (contains (Upper((Name)),"PC CONN"),"PC CONNECTION",
if (contains (Upper((Name)),"PC MALL"),"PC MALL",
if (contains (Upper((Name)),"SOFTCHOICE"),"SOFTCHOICE",
if (contains (Upper((Name)),"SOFTMART"),"SOFTMART",
if (begins (Upper((Name)),"SOFTWAREONE"),"SOFTWARE ONE",
if (contains (Upper((Name)),"SOFTWARE ONE"),"SOFTWARE ONE",
if (begins(Upper((Name)),"ZONES"),"ZONES",
if (begins(Upper((Name)),"CARAHSOFT"),"CARAHSOFT",
if (begins(Upper((Name)),"EMERGENT"),"EMERGENT",
"OTHER"))))))))))))))))))))))))</formula>
		<formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
		<label>CH Partner Roll-up</label>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>CLM_Coverage_Override_Reason__c</fullName>
		<inlineHelpText>Select a reason to exclude the account from GainSight</inlineHelpText>
		<label>CLM Coverage Override Reason</label>
		<picklist>
			<picklistValues>
				<fullName>ABD Named Account</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>DMe Named Account</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Government</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Managed Partner</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Territory Account</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Testing Control</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>VIPe Account</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Education</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Trade Compliance</fullName>
			</picklistValues>
			<restrictedPicklist>true</restrictedPicklist>
		</picklist>
		<type>Picklist</type>
	</fields>
	<fields>
		<fullName>CLP_COM__c</fullName>
		<formula>IF (OR ( NOT( ISPICKVAL(Status__c , "Approved")), Level__c = "Registered"), "N", 
IF (CONTAINS("Distributor| Platinum | Gold | Retail | Online Retail",Level__c), "Y", 
IF (AND ( BillingCountry = "JP", Level__c = "Certified"), "N",
IF(AND(NOT(Level__c = "Platinum"),ISPICKVAL(Partner_Program_Type__c,"Retail Partner"),NOT(INCLUDES(Specialisation__c,"Digital Imaging/ProVideo"))),"N","Y"))))</formula>
		<label>CLP COM</label>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>CLP_EDU__c</fullName>
		<formula>/*IF (OR ( NOT(ISPICKVAL(Status__c, "Approved")), AND (BillingCountry = "JP", OR(Level__c = "Registered", Level__c = "Certified"))), "N",
IF (OR ( NOT(ISPICKVAL(Status__c, "Approved")), AND(NOT(CONTAINS("JP:AS:AU:CD:CK:FJ:GU:KI:MH:NC:NF:NR:NU:NZ:KR:PF:PG:PW:SB:TF:TK:TO:TV:VU:WF:WS:MV:BT:IN:LK:BD:NP",EMEA_Sales_District__c)),NOT(INCLUDES(Specialisation__c, "Education")),AND(ISPICKVAL( Partner_Program_Type__c,"Retail Partner"), NOT(INCLUDES(Specialisation__c, "Campus Store")))), AND (BillingCountry &lt;&gt; "JP", Level__c = "Registered")),"N",
"Y"))*/




IF (
OR
( NOT(ISPICKVAL(Status__c, "Approved")),
Level__c = "Registered",
AND(ISPICKVAL( Partner_Program_Type__c,"Retail Partner"), NOT(INCLUDES(Specialisation__c, "Campus Store"))),
AND(BillingCountry = "JP", Level__c = "Certified")
),
"N",

IF (
AND
(
ISPICKVAL(Status__c, "Approved"),
OR(
CONTAINS("MV:BT:IN:LK:BD:NP:AS:AU:CD:CK:FJ:GU:KI:KR:MH:NC:NF:NR:NU:NZ:PF:PG:PW:SB:TF:TK:TO:TV:VU:WF:WS:JP:BR:MX:AG:AI::AN:AQ:AR:AW:BB:BM:BO:BS:BZ:CL:CO:CR:DM:DO:EC:FK:GD:GF:GN:GP:GS:GT:GY:HN:HT:JM:KN:KY:LC:MQ:MS:NI:PA:PE:PR:PY:SH:SR:SV:TC:TT:UM:UY:VC:VE:VG",EMEA_Sales_District__c),
INCLUDES(Specialisation__c, "Education"),
INCLUDES(Specialisation__c, "Campus Store"))
)
,
"Y",
"N"
)

)</formula>
		<label>CLP EDU</label>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>CLP_GOV__c</fullName>
		<formula>/*IF(AND(ISPICKVAL(Status__c, "Approved"),IF(Global_Region__c&lt;&gt;"Americas",IF(CONTAINS("JP",BillingCountry),
AND(Level__c &lt;&gt; "Registered",Level__c &lt;&gt; "Certified"),OR(Level__c = "Platinum Certified", 
Level__c = "Distributor",Level__c = "Certified", Level__c = "Gold Certified")),IF(OR((INCLUDES(Specialisation__c, "Education")),(INCLUDES(Specialisation__c, "Government"))),True,False))), "Y", "N")*/
IF(
	AND(
		ISPICKVAL(Status__c, "Approved"),
		Level__c &lt;&gt; "Registered",
		IF(Global_Region__c&lt;&gt;"Americas",
			IF(
				CONTAINS("JP",BillingCountry),
				Level__c &lt;&gt; "Certified",
				OR(Level__c = "Platinum Certified",Level__c = "Distributor",Level__c = "Certified", Level__c = "Gold Certified")
				),
			IF(
				OR(				
				(INCLUDES(Specialisation__c, "Government")),
				 CONTAINS('BR:MX:AI:AQ:AG:AR:AW:BS:BB:BZ:BM:BO:KY:CL:CO:CR:DM:DO:EC:SV:FK:GF:GD:GP:GT:GN:GY:HT:HN:JM:MQ:MS:AN:NI:PA:PY:PE:PR:GS:SH:KN:LC:VC:SR:TT:TC:UY:UM:VE:VG',EMEA_Sales_District__c)
				),True,False
			  )
			)
		), "Y", "N"
	)</formula>
		<label>CLP GOV</label>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>CMF_Opt_In__c</fullName>
		<defaultValue>false</defaultValue>
		<description>If true, the Partner Account has opted in to the SPP CMF Program</description>
		<inlineHelpText>Check if Partner has opted in to the SPP CMF Program</inlineHelpText>
		<label>CMF Opt-In</label>
		<type>Checkbox</type>
	</fields>
	<fields>
		<fullName>CM_ECC_ID__c</fullName>
		<description>This field will have comma separated ECC IDs from Customer Mapping table for this Account.</description>
		<label>CM ECC ID</label>
		<length>100</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>CO_Account_ID__c</fullName>
		<description>Legacy SFDC Account ID for Context Optional accounts</description>
		<externalId>true</externalId>
		<inlineHelpText>Legacy CO Account ID</inlineHelpText>
		<label>CO Account ID</label>
		<length>18</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>CPQ_Market_Segment__c</fullName>
		<description>This field value will be used to populate Market segment field on the proposal for configuring the  products that are sold in this market segment into the shopping cart.</description>
		<formula>IF 

(ISPICKVAL( Industry ,"Non-Profit/Charity"), "Non-Profit", 

IF 

((ISPICKVAL( Industry ,"Government: Federal")|| 
(ISPICKVAL( Industry ,"Government: Military/Aerospace/Defense")|| 
(ISPICKVAL( Industry ,"Government: State/Local")))) &amp;&amp; BillingCountry &lt;&gt; "CA", "Government", 

IF 

((ISPICKVAL( Industry ,"Government: Federal")|| 
(ISPICKVAL( Industry ,"Government: Military/Aerospace/Defense")|| 
(ISPICKVAL( Industry ,"Government: State/Local")))) &amp;&amp; BillingCountry = "CA", "Canadian Government", 

IF 

(ISPICKVAL( Industry ,"Education: Higher ed")|| 
(ISPICKVAL( Industry ,"Education: K-12") 
), "Education", 

"Commercial"))))</formula>
		<formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
		<inlineHelpText>This will be used to populate the Market segment in the proposal/Quote.</inlineHelpText>
		<label>CPQ Market Segment</label>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>CRM_Customer_ID__c</fullName>
		<label>CRM Customer ID</label>
		<length>10</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>CRM_Customer_Status__c</fullName>
		<label>CRM Customer Status</label>
		<length>100</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>CSAM_Assignment_Date__c</fullName>
		<description>Date/Time stamp captured on Account record when CSAM is initially assigned</description>
		<label>CSAM Assignment Date</label>
		<type>DateTime</type>
	</fields>
	<fields>
		<fullName>CSAM_Manager__c</fullName>
		<deleteConstraint>SetNull</deleteConstraint>
		<label>CSAM Manager</label>
		<referenceTo>User</referenceTo>
		<relationshipName>Account</relationshipName>
		<type>Lookup</type>
	</fields>
	<fields>
		<fullName>CSAM_Territory__c</fullName>
		<formula>IF (CONTAINS("AL:AR:IL:IN:IA:KS:KY:LA:MB:MI:MN:MS:MO:NE:ND:NU:OH:OK:ON:SK:SD:TN:TX:WI", BillingState),'Central', 
IF (CONTAINS("AS:AA:CT:DE:DC:FL:GA:ME:MD:MA:NB:NH:NJ:NY:NL:NC:NS:PA:PE:PR:QC:RI:SC:VT:VA:WV",BillingState),'East',
IF (CONTAINS("AK:AB:AZ:BC:CA:CO:HI:ID:MT:NV:NM:NT:OR:UT:WA:WY:YT",BillingState), 'West',  
EMEA_Sales_Region__c)))</formula>
		<label>CSAM Territory</label>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>CSAM__c</fullName>
		<deleteConstraint>SetNull</deleteConstraint>
		<label>CSAM</label>
		<referenceTo>User</referenceTo>
		<relationshipName>CSAM_Agent</relationshipName>
		<type>Lookup</type>
	</fields>
	<fields>
		<fullName>CSM_Acquisition__c</fullName>
		<deleteConstraint>SetNull</deleteConstraint>
		<label>AGS – AM – Campaign</label>
		<referenceTo>User</referenceTo>
		<relationshipName>CSMAcquisition</relationshipName>
		<type>Lookup</type>
	</fields>
	<fields>
		<fullName>CSM_Analytics__c</fullName>
		<deleteConstraint>SetNull</deleteConstraint>
		<label>AGS – AM – Social</label>
		<referenceTo>User</referenceTo>
		<relationshipName>CSMAnalytics</relationshipName>
		<type>Lookup</type>
	</fields>
	<fields>
		<fullName>CSM_Conversion__c</fullName>
		<deleteConstraint>SetNull</deleteConstraint>
		<label>AGS – AM – AMO</label>
		<referenceTo>User</referenceTo>
		<relationshipName>CSMConversion</relationshipName>
		<type>Lookup</type>
	</fields>
	<fields>
		<fullName>CS_Parent_Account__c</fullName>
		<deleteConstraint>SetNull</deleteConstraint>
		<label>CS Parent Account</label>
		<referenceTo>Account</referenceTo>
		<relationshipLabel>CS Accounts</relationshipLabel>
		<relationshipName>CSParentAccount</relationshipName>
		<type>Lookup</type>
	</fields>
	<fields>
		<fullName>CS_Region__c</fullName>
		<label>CS Region</label>
		<picklist>
			<picklistValues>
				<fullName>APAC</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>JAPAN</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>EMEA</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>LACA</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>EMEA - Liverpool</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>EMEA – Dublin</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>NA - Lehi</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>NA - Nashville</fullName>
			</picklistValues>
		</picklist>
		<type>Picklist</type>
	</fields>
	<fields>
		<fullName>CS_Sub_Region__c</fullName>
		<label>CS Sub Region</label>
		<length>100</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>Campaign_GreenZone__c</fullName>
		<inlineHelpText>This information has been relocated to 'Customer Health' related list on this account.</inlineHelpText>
		<label>Campaign</label>
		<picklist>
			<picklistValues>
				<fullName>Green</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Yellow</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Red</fullName>
			</picklistValues>
		</picklist>
		<type>Picklist</type>
	</fields>
	<fields>
		<fullName>Can_Order__c</fullName>
		<formula>IF( AND( CASE( Status__c, "Approved", 1, "Payment Requested", 1, 0 ) = 1, NOT( Inactive_EMEA_Partner__c ) ) , "Y", "N" )</formula>
		<label>Can Order</label>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>Cancelled_Seat__c</fullName>
		<description>No of Seats cancelled</description>
		<label>Cancelled Seat</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>Cancelled__c</fullName>
		<description>No of Seats cancelled</description>
		<label>Cancelled</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>Cancelling_Seat__c</fullName>
		<description>Number of seats cancelling</description>
		<label>Cancelling Seat</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>Cancelling__c</fullName>
		<description>Number of fields cancelling</description>
		<label>Cancelling</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>Captivate_Prime_Partner__c</fullName>
		<defaultValue>false</defaultValue>
		<description>Created for US # - 366974 (Deal Reg for Captivate Prime)</description>
		<label>Captivate Prime Partner</label>
		<type>Checkbox</type>
	</fields>
	<fields>
		<fullName>Captive_Prime_Partner__c</fullName>
		<defaultValue>false</defaultValue>
		<description>Created for US # - 366974 (Deal Reg for Captivate Prime)</description>
		<label>Captive Prime Partner</label>
		<type>Checkbox</type>
	</fields>
	<fields>
		<fullName>Categories_of_training__c</fullName>
		<label>Categories of training offered</label>
		<picklist>
			<picklistValues>
				<fullName>Adobe server products</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Basic end-user classes</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Developer</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Digital video</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>High-end specialized/technical</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Prepress or printing-related topics</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Publishing concepts</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Web design</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Other</fullName>
			</picklistValues>
		</picklist>
		<type>MultiselectPicklist</type>
	</fields>
	<fields>
		<fullName>Certified_Acrobat_Level_1__c</fullName>
		<label>Certified – Acrobat Level 1</label>
		<length>100</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>Certified_Acrobat_Level_2__c</fullName>
		<label>Certified – Acrobat Level 2</label>
		<length>100</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>Certified_Advanced__c</fullName>
		<label>Certified - Advanced</label>
		<length>100</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>Certified_Creative_Suites_Level_1__c</fullName>
		<label>Certified –  Creative Suites Level 1</label>
		<length>100</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>Certified_Creative_Suites_Level_2__c</fullName>
		<label>Certified – Creative Suites Level 2</label>
		<length>100</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>Certified_Education_Specialization__c</fullName>
		<description>This field is more like a input from user</description>
		<label>Certified – Education Specialization</label>
		<length>100</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>Certified_Volume_Licensing_Level_1__c</fullName>
		<label>Certified – Volume Licensing Level 1</label>
		<length>100</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>Certified_Volume_Licensing_Level_2__c</fullName>
		<label>Certified – Volume Licensing Level 2</label>
		<length>100</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>Channel_Leader_Email__c</fullName>
		<label>Channel Leader Email</label>
		<type>Email</type>
	</fields>
	<fields>
		<fullName>City_State_Country__c</fullName>
		<description>Used for the Account Lookup fields to go around the 10 column limit</description>
		<formula>If(BillingCity ='' &amp;&amp; BillingState = '', BillingCountry,
If(BillingCity ='' &amp;&amp; BillingState &lt;&gt; '',BillingState &amp; ", " &amp; BillingCountry,
If(BillingCity &lt;&gt;'' &amp;&amp; BillingState = '',BillingCity &amp; ", " &amp; BillingCountry,
BillingCity &amp; ", " &amp;  BillingState &amp; ", " &amp; BillingCountry)))</formula>
		<formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
		<label>City State Country</label>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>Classification__c</fullName>
		<description>03/29/2011 AE</description>
		<label>Classification</label>
		<picklist>
			<picklistValues>
				<fullName>Named Account</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Named Account - Enterprise</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Named Account - Desktop</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Named Account - Connect</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Named Account - M&amp;E</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Focused Account</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Top Desktop Customer List</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>High Potential List</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Desktop Focused List</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>CS Must Wins</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>ACR High Potential List</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Top CEM List</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Josh Channel Focused Account</fullName>
			</picklistValues>
		</picklist>
		<type>MultiselectPicklist</type>
	</fields>
	<fields>
		<fullName>ClientExecutive__c</fullName>
		<deleteConstraint>SetNull</deleteConstraint>
		<description>Managed by Client Services team.</description>
		<label>AGS – AM</label>
		<referenceTo>User</referenceTo>
		<relationshipName>ClientExecutive</relationshipName>
		<type>Lookup</type>
	</fields>
	<fields>
		<fullName>Client_Concern__c</fullName>
		<label>Client Concern</label>
		<picklist>
			<controllingField>Green_Zone__c</controllingField>
			<picklistValues>
				<fullName>Contracted Product Specific</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Sales/Pre-Sales</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Services: Account Management</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Services: Consulting</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Services: Custom Solutions</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Services: Implementation</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Services: ClientCare</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Billing</fullName>
			</picklistValues>
		</picklist>
		<type>Picklist</type>
	</fields>
	<fields>
		<fullName>Client_Exec__c</fullName>
		<deleteConstraint>SetNull</deleteConstraint>
		<label>Client Exec</label>
		<referenceTo>User</referenceTo>
		<relationshipName>Accounts666</relationshipName>
		<type>Lookup</type>
	</fields>
	<fields>
		<fullName>Client_Type__c</fullName>
		<label>Client Type</label>
		<picklist>
			<picklistValues>
				<fullName>Partner</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Partner - End Client</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Tier 1</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Tier 2</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Tier 3</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Tier 4</fullName>
			</picklistValues>
			<sorted>true</sorted>
		</picklist>
		<type>Picklist</type>
	</fields>
	<fields>
		<fullName>Company_Email__c</fullName>
		<label>Company Email</label>
		<type>Email</type>
	</fields>
	<fields>
		<fullName>Company_Profile_Rating_Result__c</fullName>
		<formula>IF( Company_Profile_Rating__c = 'A', IMAGE("/resource/green","green")&amp;" Organisation has excellent profile fit", 
IF( Company_Profile_Rating__c = 'B', IMAGE("/resource/yellow","yellow")&amp;" Organisation has average profile fit", 
IF( Company_Profile_Rating__c = 'C', IMAGE("/resource/yellow","yellow")&amp;" Organisation has average profile fit", 
IF( Company_Profile_Rating__c = 'D', IMAGE("/resource/red","red")&amp;" Organisation has poor profile fit", 
''))))</formula>
		<formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
		<label>Company Profile Rating Result</label>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>Company_Profile_Rating__c</fullName>
		<label>Company Profile Rating</label>
		<length>20</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>Company_Profile__c</fullName>
		<description>Field used by Affinity Account Program to capture information for Marketing.</description>
		<inlineHelpText>Marketing to enter information about the account.</inlineHelpText>
		<label>Company Profile</label>
		<type>TextArea</type>
	</fields>
	<fields>
		<fullName>Company_Type__c</fullName>
		<label>Company Type</label>
		<picklist>
			<picklistValues>
				<fullName>Large Account Reseller (LAR)</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Value Added Reseller (VAR)</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Systems Integrator (SI)</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Independent Software Vendor (ISV)</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Original Equipment Manufacturer (OEM)</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Consulting Firm</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Service(s) Provider</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Online Retailer</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Retail Partner</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Authorized Distributor</fullName>
			</picklistValues>
		</picklist>
		<type>MultiselectPicklist</type>
	</fields>
	<fields>
		<fullName>Competitor_Contract_Exp_Date__c</fullName>
		<label>Competitor Contract Exp Date</label>
		<type>Date</type>
	</fields>
</CustomObject>